--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "course": "CSE40-S25",
     "assignment": "HO5",
     "server": "http://lighthouse.soe.ucsc.edu",
-    "user": "sslug@ucsc.edu",
-    "pass": "1234567890"
+    "user": "vkokalla@ucsc.edu",
+    "pass": "410bbb61a1356429f41342e44271c5ba"
 }
